Moved quick links and footer

--- a/data/start.html
+++ b/data/start.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Homepage</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/slider.css" />
-    <link rel="stylesheet" href="./css/start.css" />
-    <link rel="stylesheet" href="./css/media/media.css" />
-    <link rel="stylesheet" href="./css/media/media-start.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/slider.css" />
+    <link rel="stylesheet" href="../css/start.css" />
+    <link rel="stylesheet" href="../css/media/media.css" />
+    <link rel="stylesheet" href="../css/media/media-start.css" />
   </head>
 
   <body>
     <header class="mg border-bottom">
       <article class="inch flex space">
-        <a href="./start.html">
+        <a href="../start.html">
           <h1 class="logo-tm"></h1>
         </a>
         <section class="login-bag flex space align">
           <a href="#" class="text px-12">E-mail sign up</a>
-          <a href="./shopping-bag.html" class="text bag px-12">Bag (0)</a>
+          <a href="../shopping-bag.html" class="text bag px-12">Bag (0)</a>
           <a href="javascript:void(0);" class="icon" onclick="toggle()">
-            <img src="./img/ico_menu.png" alt="ico" id="ico" />
+            <img src="../src/assets/img/ico_menu.png" alt="ico" id="ico" />
           </a>
         </section>
       </article>
@@ -38,7 +38,7 @@
           <li>Store Locator</li>
           <li>
             <input type="text" placeholder="Style Name" class="form_input" />
-            <img src="./img/ico.png" alt="ico" class="form_ico" />
+            <img src="../src/assets/img/ico.png" alt="ico" class="form_ico" />
           </li>
         </ul>
       </nav>
@@ -48,17 +48,17 @@
       <section class="slider">
         <div class="slide first">
           <a href="./catalog.html">
-            <img src="./img/1.jpg" alt="1" class="width" />
+            <img src="../src/assets/img/1.jpg" alt="1" class="width" />
           </a>
         </div>
         <div class="slide">
           <a href="./item.html">
-            <img src="./img/2.jpg" alt="2" class="width" />
+            <img src="../src/assets/img/2.jpg" alt="2" class="width" />
           </a>
         </div>
         <div class="slide">
           <a href="./catalog.html">
-            <img src="./img/3.jpg" alt="3" class="width" />
+            <img src="../src/assets/img/3.jpg" alt="3" class="width" />
           </a>
         </div>
         <aside class="buttons flex space">
@@ -76,12 +76,16 @@
 
     <article class="banners flex border-bottom">
       <a href="./item.html" class="block width border-right">
-        <img src="./img/left.png" alt="Nike Red" class="high" />
+        <img src="../src/assets/img/left.png" alt="Nike Red" class="high" />
         <h3 class="title bold pos">Nike Red</h3>
       </a>
       <section class="block width right">
         <a href="./catalog.html" id="sale">
-          <img src="./img/right.png" alt="Caps & Hats" class="high" />
+          <img
+            src="../src/assets/img/right.png"
+            alt="Caps & Hats"
+            class="high"
+          />
         </a>
         <div class="flex col cent align pos">
           <h3 class="title bold">Caps & Hats</h3>
@@ -96,24 +100,24 @@
 
     <article class="mg top flex space">
       <section class="tag px-14">
-        <img src="./img/ph1.png" alt="ph1" class="bot" />
+        <img src="../src/assets/img/ph1.png" alt="ph1" class="bot" />
         <span class="new">NEW</span>
         <h4 class="bold">Only Skinny Jeans</h4>
         <p>£65.50</p>
       </section>
       <section class="tag px-14">
-        <img src="./img/ph2.png" alt="ph2" class="bot" />
+        <img src="../src/assets/img/ph2.png" alt="ph2" class="bot" />
         <span class="new">NEW</span>
         <h4 class="bold">Neck Knitted Jumper</h4>
         <p>£76.25</p>
       </section>
       <section class="tag px-14">
-        <img src="./img/ph3.png" alt="ph3" class="bot" />
+        <img src="../src/assets/img/ph3.png" alt="ph3" class="bot" />
         <h4 class="bold">Turtle Neck Jumper in Rib</h4>
         <p>£130.25</p>
       </section>
       <section class="tag px-14">
-        <img src="./img/ph4.png" alt="ph4" class="bot" />
+        <img src="../src/assets/img/ph4.png" alt="ph4" class="bot" />
         <h4 class="bold">With Pathwork Crochet</h4>
         <p>£80.60</p>
       </section>
@@ -174,8 +178,8 @@
           </div>
           <article class="flex space align">
             <div class="social" id="before">
-              <img src="./img/fb.png" alt="facebook" />
-              <img src="./img/twi.png" alt="twitter" />
+              <img src="../src/assets/img/fb.png" alt="facebook" />
+              <img src="../src/assets/img/twi.png" alt="twitter" />
             </div>
           </article>
         </section>
@@ -195,9 +199,9 @@
       </section>
     </footer>
 
-    <script src="./dist/slider.js"></script>
-    <script src="./dist/toggle.js"></script>
-    <script src="./dist/resize.js"></script>
-    <script src="./dist/start.js"></script>
+    <script src="../dist/slider.js"></script>
+    <script src="../dist/toggle.js"></script>
+    <script src="../dist/resize.js"></script>
+    <script src="../dist/start.js"></script>
   </body>
 </html>
