Update logic for slider

--- a/data/detail.html
+++ b/data/detail.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Item</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/catalog.css" />
-    <link rel="stylesheet" href="./css/start.css" />
-    <link rel="stylesheet" href="./css/item.css" />
-    <link rel="stylesheet" href="./css/detail.css" />
-    <link rel="stylesheet" href="./css/media/media.css" />
-    <link rel="stylesheet" href="./css/media/media-catalog.css" />
-    <link rel="stylesheet" href="./css/media/media-item.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/catalog.css" />
+    <link rel="stylesheet" href="../css/start.css" />
+    <link rel="stylesheet" href="../css/item.css" />
+    <link rel="stylesheet" href="../css/detail.css" />
+    <link rel="stylesheet" href="../css/media/media.css" />
+    <link rel="stylesheet" href="../css/media/media-catalog.css" />
+    <link rel="stylesheet" href="../css/media/media-item.css" />
   </head>
 
   <body>
