--- a/data/catalog.html
+++ b/data/catalog.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Catalog</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/catalog.css" />
-    <link rel="stylesheet" href="./css/start.css" />
-    <link rel="stylesheet" href="./css/media/media.css" />
-    <link rel="stylesheet" href="./css/media/media-catalog.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/catalog.css" />
+    <link rel="stylesheet" href="../css/start.css" />
+    <link rel="stylesheet" href="../css/media/media.css" />
+    <link rel="stylesheet" href="../css/media/media-catalog.css" />
   </head>
 
   <body>
