--- a/data/item.html
+++ b/data/item.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Item</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/catalog.css" />
-    <link rel="stylesheet" href="./css/start.css" />
-    <link rel="stylesheet" href="css/item.css" />
-    <link rel="stylesheet" href="./css/media/media.css" />
-    <link rel="stylesheet" href="./css/media/media-catalog.css" />
-    <link rel="stylesheet" href="./css/media/media-item.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/catalog.css" />
+    <link rel="stylesheet" href="../css/start.css" />
+    <link rel="stylesheet" href="../css/item.css" />
+    <link rel="stylesheet" href="../css/media/media.css" />
+    <link rel="stylesheet" href="../css/media/media-catalog.css" />
+    <link rel="stylesheet" href="../css/media/media-item.css" />
   </head>
 
   <body>
@@ -26,7 +26,7 @@
             >Bag (0)</a
           >
           <a href="javascript:void(0);" class="icon" onclick="toggle()">
-            <img src="./img/ico_menu.png" alt="ico" id="ico" />
+            <img src="../src/assets/img/ico_menu.png" alt="ico" id="ico" />
           </a>
         </section>
       </article>
@@ -42,7 +42,7 @@
           <li>Store Locator</li>
           <li>
             <input type="text" placeholder="Style Name" class="form_input" />
-            <img src="./img/ico.png" alt="ico" class="form_ico" />
+            <img src="../src/assets/img/ico.png" alt="ico" class="form_ico" />
           </li>
         </ul>
       </nav>
@@ -60,7 +60,7 @@
       <section class="area take">
         <div class="flex container">
           <img
-            src="./img/full.png"
+            src="../src/assets/img/full.png"
             id="expanded"
             alt="full"
             class="width high"
@@ -68,13 +68,25 @@
         </div>
         <div class="flex grow item">
           <section class="container thumb" onclick="switcher(this);">
-            <img src="./img/thumb_0.jpg" alt="thumb-0" class="width high" />
+            <img
+              src="../src/assets/img/thumb_0.jpg"
+              alt="thumb-0"
+              class="width high"
+            />
           </section>
           <section class="container thumb" onclick="switcher(this);">
-            <img src="./img/thumb_1.jpg" alt="thumb-1" class="width high" />
+            <img
+              src="../src/assets/img/thumb_1.jpg"
+              alt="thumb-1"
+              class="width high"
+            />
           </section>
           <section class="container thumb" onclick="switcher(this);">
-            <img src="./img/thumb_2.jpg" alt="thumb-2" class="width high" />
+            <img
+              src="../src/assets/img/thumb_2.jpg"
+              alt="thumb-2"
+              class="width high"
+            />
           </section>
         </div>
       </section>
@@ -133,7 +145,7 @@
 
     <article class="flex grow border-bottom width mid">
       <section class="block border-right width">
-        <img src="./img/adidas.png" alt="Adidas" class="high" />
+        <img src="../src/assets/img/adidas.png" alt="Adidas" class="high" />
         <div class="flex col cent align pos">
           <h3 class="title bold white">Addidas Blue</h3>
           <i class="white sale px-16">For men</i>
@@ -141,14 +153,18 @@
       </section>
       <section class="flex width rep">
         <div class="block border-right">
-          <img src="./img/repair.png" alt="Repair" class="high width" />
+          <img
+            src="../src/assets/img/repair.png"
+            alt="Repair"
+            class="high width"
+          />
           <div class="flex col cent align abs">
             <h3 class="title bold white">Repair Patches</h3>
             <p class="sale px-16 white">£150.50</p>
           </div>
         </div>
         <div class="block none">
-          <img src="./img/sale.png" alt="Sale" class="high" />
+          <img src="../src/assets/img/sale.png" alt="Sale" class="high" />
           <div class="flex col cent align abs dis">
             <h3 class="title bold red">Sale</h3>
             <i class="sale px-16">-70%</i>
@@ -206,8 +222,8 @@
           </div>
           <article class="flex space align">
             <div class="social" id="before">
-              <img src="./img/fb.png" alt="facebook" />
-              <img src="./img/twi.png" alt="twitter" />
+              <img src="../src/assets/img/fb.png" alt="facebook" />
+              <img src="../src/assets/img/twi.png" alt="twitter" />
             </div>
           </article>
         </section>
