--- a/data/start.html
+++ b/data/start.html
@@ -15,12 +15,12 @@
   <body>
     <header class="mg border-bottom">
       <article class="inch flex space">
-        <a href="../start.html">
+        <a href="./start.html">
           <h1 class="logo-tm"></h1>
         </a>
         <section class="login-bag flex space align">
           <a href="#" class="text px-12">E-mail sign up</a>
-          <a href="../shopping-bag.html" class="text bag px-12">Bag (0)</a>
+          <a href="./shopping-bag.html" class="text bag px-12">Bag (0)</a>
           <a href="javascript:void(0);" class="icon" onclick="toggle()">
             <img src="../src/assets/img/ico_menu.png" alt="ico" id="ico" />
           </a>
