--- a/data/catalog.html
+++ b/data/catalog.html
@@ -24,7 +24,7 @@
             >Bag (0)</a
           >
           <a href="javascript:void(0);" class="icon" onclick="toggle()">
-            <img src="./img/ico_menu.png" alt="ico" id="ico" />
+            <img src="../src/assets/img/ico_menu.png" alt="ico" id="ico" />
           </a>
         </section>
       </article>
@@ -40,7 +40,7 @@
           <li>Store Locator</li>
           <li>
             <input type="text" placeholder="Style Name" class="form_input" />
-            <img src="./img/ico.png" alt="ico" class="form_ico" />
+            <img src="../src/assets/img/ico.png" alt="ico" class="form_ico" />
           </li>
         </ul>
       </nav>
@@ -103,7 +103,7 @@
 
     <article class="flex border-bottom width mid">
       <section class="block border-right width">
-        <img src="./img/adidas.png" alt="Adidas" class="high" />
+        <img src="../src/assets/img/adidas.png" alt="Adidas" class="high" />
         <div class="flex col cent align pos">
           <h3 class="title bold white">Addidas Blue</h3>
           <i class="white sale px-16">For men</i>
@@ -111,14 +111,18 @@
       </section>
       <section class="flex width rep">
         <div class="block border-right">
-          <img src="./img/repair.png" alt="Repair" class="high width" />
+          <img
+            src="../src/assets/img/repair.png"
+            alt="Repair"
+            class="high width"
+          />
           <div class="flex col cent align abs">
             <h3 class="title bold white">Repair Patches</h3>
             <p class="sale px-16 white">£150.50</p>
           </div>
         </div>
         <div class="block none">
-          <img src="./img/sale.png" alt="Sale" class="high" />
+          <img src="../src/assets/img/sale.png" alt="Sale" class="high" />
           <div class="flex col cent align abs dis">
             <h3 class="title bold red">Sale</h3>
             <i class="sale px-16">-70%</i>
@@ -176,8 +180,8 @@
           </div>
           <article class="flex space align">
             <div class="social" id="before">
-              <img src="./img/fb.png" alt="facebook" />
-              <img src="./img/twi.png" alt="twitter" />
+              <img src="../src/assets/img/fb.png" alt="facebook" />
+              <img src="../src/assets/img/twi.png" alt="twitter" />
             </div>
           </article>
         </section>
@@ -197,12 +201,12 @@
       </section>
     </footer>
 
-    <script src="./dist/select.js"></script>
-    <script src="./dist/range.js"></script>
-    <script src="./dist/toggle.js"></script>
-    <script src="./dist/resize.js"></script>
-    <script src="./data/catalog.js"></script>
-    <script src="./dist/dynamic.js"></script>
-    <script src="./dist/shopping.js"></script>
+    <script src="../dist/select.js"></script>
+    <script src="../dist/range.js"></script>
+    <script src="../dist/toggle.js"></script>
+    <script src="../dist/resize.js"></script>
+    <script src="../data/catalog.js"></script>
+    <script src="../dist/dynamic.js"></script>
+    <script src="../dist/shopping.js"></script>
   </body>
 </html>
